Frontend and user API methods.
